--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -70,12 +70,12 @@ Upgrading FreeBSD should only be attempted after backing up _all_ data and confi
 ====
 
 [[security-errata]]
-== Security and Errata
+== Included Security Fixes and Errata Patches
 
-This section lists the various Security Advisories and Errata Notices since {releasePrev}.
+This section lists the various Security Advisories and Errata Notices since {releasePrev} that are fixed in {releaseCurrent}.
 
 [[security]]
-=== Security Advisories
+=== Fixed Security Advisories
 
 [.informaltable]
 [cols="1,1,1", frame="none", options="header"]
@@ -214,7 +214,7 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |===
 
 [[errata]]
-=== Errata Notices
+=== Patched Errata Notices
 
 [.informaltable]
 [cols="1,1,1", frame="none", options="header"]
