--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1349,6 +1349,25 @@ Please see link:https://www.freebsd.org/releases/{localRel}R/hardware[the list o
 [[hardware-virtualization]]
 === Virtualization Support
 
+man:bhyve[8] and man:vmm[4] now support the arm64 and riscv platforms.
+The `sysutils/u-boot-bhyve-arm64` and `sysutils/u-boot-bhyve-riscv` ports provide boot loaders for use on these platforms.
+gitref:47e073941f4e[repository=src]
+gitref:d3916eace506[repository=src]
+{{< sponsored "Arm Ltd" >}}
+{{< sponsored "Innovate UK" >}}
+{{< sponsored "The FreeBSD Foundation" >}}
+{{< sponsored "University Politehnica of Bucharest" >}}
+
+man:bhyve[4] now supports a "slirp" networking backend, which enables unprivileged user networking.
+Currently only inbound connections to the guest are supported, outbound connections from the guest are not.
+This feature requires the `net/libslirp` port.
+gitref:c5359e2af5ab[repository=src] {{< sponsored "Innovate UK" >}}
+
+man:bhyve[4] now may configure a NUMA topology for guest memory.
+Furthermore, it is possible to define a man:domainset[9] policy for each guest NUMA domain, wherein the host memory used to back the guest physical memory of each guest NUMA domain can be specified, akin to man:cpuset[1]'s `-n` option.
+This is supported only for amd64 guests for now.
+gitref:f1d705d4f431[repository=src]
+
 The NVMM hypervisor is now detected.
 gitref:34f40baca641[repository=src]
 
