handbook/cutting-edge: Fix a command typo
Signed-off-by: ykla yklaxds@gmail.com
Sponsored by: Chinese FreeBSD Community

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1330,7 +1330,7 @@ To check if that was successful, chroot into the mountpoint of the boot environm
 [source,shell]
 ....
 # chroot /mnt/upgrade
-# freebsd-version -ku
+# freebsd-version -kru
 # exit
 ....
 
