relnotes: Correct details about KTLS
KTLS already shipped in 13.0 (and was included in GENERIC on at least
amd64).  The change in 15.0 is toggling the default state of the
sysctl gating its use.

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1270,9 +1270,7 @@ If synchronization with an older version of FreeBSD is needed the protocol versi
 It defaults to 1500 for synchronization between hosts running FreeBSD 15.0.
 gitref:99475087d63b[repository=src] {{< sponsored "InnoGames GmbH" >}}
 
-Kernel TLS support has been added.
-The corresponding kernel build option is `KTLS`.
-This option is now enabled by default in `GENERIC` (default) kernels for aarch64, amd64, powerpc64, and powerpc64le.
+Kernel TLS support is now enabled by default in `GENERIC` (default) kernels for aarch64, amd64, powerpc64, and powerpc64le.
 gitref:b2f7c53430c3[repository=src]
 {{< sponsored "Chelsio Communications" >}}
 
