--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1275,8 +1275,9 @@ gitref:b2f7c53430c3[repository=src]
 {{< sponsored "Chelsio Communications" >}}
 
 The `net.inet.{tcp,udp,raw}.bind_all_fibs` tunables have been added.
-They modify socket behavior such that packets not originating from the an interface in the same FIB as the socket are ignored.
-TCP and UDP sockets belonging to different FIBs may also be bound to the same address.
+They default to 1 for backwards compatibility.
+Setting them to 0 modifies the corresponding protocol's socket behavior such that packets not originating from an interface in the same FIB as the socket are ignored.
+In this case, TCP and UDP sockets belonging to different FIBs may also be bound to the same address.
 The default behavior is unmodified.
 gitref:5dc99e9bb985[repository=src],
 gitref:08e638c089ab[repository=src],
