--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -516,6 +516,13 @@ One True Awk (man:awk[1]) has been updated to 2nd Edition, with new -csv support
 The snapshot used is 20250804.
 gitref:b45a181a74c8[repository=src]
 
+The system reference manual toolchain, man:mandoc[1], has been updated to version 1.14.6 snapshot 2025-09-26. This version includes improved compatibility with groff and DocBook, improved html and markdown output, and the deprecation of the LIBRARY section.
+gitref:c1c95add8c80[repository=src],
+gitref:80c12959679a[repository=src],
+gitref:4c07abdbacf4[repository=src],
+gitref:06410c1b5163[repository=src],
+gitref:59fc2b0166f7[repository=src]
+
 The man:jemalloc[3] library has been updated to version 5.3.0.
 gitref:c43cad871720[repository=src]
 
