--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -505,7 +505,8 @@ The deprecated man:ftpd[8] has been removed from the base system.
 Users who still need it can install the `ftp/freebsd-ftpd` port.
 gitref:259bb93b80c0[repository=src]
 
-Add a `-f` option to `kadmin -l dump` which can be used to dump the Heimdal KDC database in a format that can be loaded into the MIT KDC. See https://wiki.freebsd.org/Kerberos/Heimdal2MIT_KDC_Migration for how to use `-f` to transfer/convert the KDC database.
+Add a `-f` option to `kadmin -l dump` which can be used to dump the Heimdal KDC database in a format that can be loaded into the MIT KDC.
+See https://wiki.freebsd.org/Kerberos/Heimdal2MIT_KDC_Migration for how to use `-f` to transfer/convert the KDC database.
 gitref:9fd3b28d4e0d[repository=src]
 gitref:23fbea8cf2f3[repository=src]
 
@@ -739,7 +740,7 @@ This section covers changes in support for cloud environments.
 {releaseCurrent} supports cloudinit, including the `nuageinit` startup script and support for a `config-drive` partition.
 It is compatible with OpenStack and many hosting facilities.
 See the https://cloud-init.io[cloud-init] web site and the commit messages,
-gitref:16a6da44e28d[repository=src] gitref:227e7a205edf[repository=src]. {{< sponsored "OVHcloud" >}}
+gitref:16a6da44e28d[repository=src] gitref:227e7a205edf[repository=src] {{< sponsored "OVHcloud" >}}
 
 The FreeBSD project is now publishing OCI-compatible container images.
 gitref:8a688fcc242e[repository=src]
@@ -1234,6 +1235,12 @@ This section describes changes that affect networking in FreeBSD.
 [[network-general]]
 === General Network
 
+FreeBSD now implements the `SO_SPLICE` interface, originally from OpenBSD.
+This features allows userspace applications to splice two connected TCP sockets together, after which data arriving on one socket is automatically forwarded through the socket to which it is spliced, instead of being delivered to the application.
+gitref:a1da7dc1cdad[repository=src]
+{{< sponsored "Klara, Inc." >}}
+{{< sponsored "Stormshield" >}}
+
 The man:ifconfig[8] utility will no longer accept assigning IP addresses to the underlying member interfaces of a man:bridge[4].
 To temporarily bypass this safeguard, use the `net.link.bridge.member_ifaddrs` man:sysctl[8].
 This sysctl is expected to be removed in FreeBSD 16.
@@ -1252,7 +1259,8 @@ gitref:dadf64c5586e[repository=src]
 AIM(Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
 gitref:472a0ccf847a[repository=src] {{< sponsored "Rubicon Communications, LLC (\"Netgate\") and BBOX.io" >}}
 
-This feature has also been added to the man:lem[4], man:em[4] and man:igb[4] drivers.  A major regression in UDP performance introduced in FreeBSD 12.0, including NFS over UDP, is believed to be fixed with this change.
+This feature has also been added to the man:lem[4], man:em[4] and man:igb[4] drivers.
+A major regression in UDP performance introduced in FreeBSD 12.0, including NFS over UDP, is believed to be fixed with this change.
 gitref:49f12d5b38f6[repository=src] {{< sponsored "Rubicon Communications, LLC (\"Netgate\") and BBOX.io" >}}
 
 Teach man:ip6addrctl[8] to attach and run itself in a jail.
@@ -1321,7 +1329,6 @@ Descriptors returned by man:sctp_peeloff[2] now inherit Capsicum capability man:
 gitref:ae3d7e27abc9[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
-
 The default value of the sysctl variable `net.inet.tcp.nolocaltimewait` has changed from 1 to 0.
 This means that FreeBSD does not skip the `TIME_WAIT` state anymore for endpoints for which the remote address is local.
 The new sysctl variable `net.inet.tcp.msl_local` can be used to control the time these endpoints stay in the `TIME_WAIT` state.
@@ -1331,7 +1338,8 @@ gitref:c3fc0db3bc50[repository=src]
 
 The local stream (AF_UNIX/SOCK_STREAM) and sequenced packet stream (AF_UNIX/SOCK_SEQPACKET) sockets have been improved for better bulk transfer and round trip times.
 The SOCK_SEQPACKET socket has been brought to the specification and now behaves as a true stream socket, while in previous FreeBSD releases it could exhibit features of
-a datagram socket.  Applications that were using SOCK_SEQPACKET incorrectly and relied on old implementation bugs may need to be adjusted.
+a datagram socket.
+Applications that were using SOCK_SEQPACKET incorrectly and relied on old implementation bugs may need to be adjusted.
 gitref:d15792780760[repository=src]
 
 [[wireless-networking]]
@@ -1414,14 +1422,17 @@ gitref:44e5a0150835[repository=src],
 gitref:9a37f1024ceb[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
-`virtual_oss` is imported to base. The `audio/virtual_oss` port will stop being built from FreeBSD 15.0 onwards.
-Regarding user-facing changes, the only practical difference is the installation process. Everything is provided by the base system, except for the following optional components, which can be installed from ports:
+`virtual_oss` is imported to base.
+The `audio/virtual_oss` port will stop being built from FreeBSD 15.0 onwards.
+Regarding user-facing changes, the only practical difference is the installation process.
+Everything is provided by the base system, except for the following optional components, which can be installed from ports:
 
 * sndio backend support: `audio/virtual_oss_sndio`
 * bluetooth backend support: `audio/virtual_oss_bluetooth`
 * `virtual_equalizer(8)`: `audio/virtual_oss_equalizer`
 
-Apart from that, `virtual_oss` should work as expected. Users of `virtual_oss` can uninstall `audio/virtual_oss` and instead use the base system version from now on.
+Apart from that, `virtual_oss` should work as expected.
+Users of `virtual_oss` can uninstall `audio/virtual_oss` and instead use the base system version from now on.
 gitref:5a31c623143f[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
@@ -1505,7 +1516,8 @@ gitref:655fcdde1aff[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 The package:net/wifi-firmware-kmod@release[] package has been added to the DVD ISO, providing firmware for a broader set of Wi-Fi drivers.
 gitref:8c6df7ead19c[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-The `FreeBSD-base` repository is now defined in `/etc/pkg/FreeBSD.conf`, disabled by default.  Systems which installed with pkgbase prior to 15.0-RC1 (if running `releng/15.0`) or November 15th (if running from `stable`/`main` snapshots) will need to remove the definition of the `FreeBSD-base` repository from `/usr/local/etc/pkg/repos/` and replace it with a single line `FreeBSD-base: { enabled: yes }`.
+The `FreeBSD-base` repository is now defined in `/etc/pkg/FreeBSD.conf`, disabled by default.
+Systems which installed with pkgbase prior to 15.0-RC1 (if running `releng/15.0`) or November 15th (if running from `stable`/`main` snapshots) will need to remove the definition of the `FreeBSD-base` repository from `/usr/local/etc/pkg/repos/` and replace it with a single line `FreeBSD-base: { enabled: yes }`.
 gitref:5d832135a971[repository=src]
 
 [[future-releases]]
