relnotes: Use consistent markup for Git references
Replace references in ()'s mid-sentence with a list of references at
the end of items.  The latter is the more common style.

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -567,29 +567,39 @@ gitref:a988846174e0[repository=src]
 `llvm` has been upgraded to 19.1.7-0-gcd708029e0b2.
 gitref:dc3f24ea8a25[repository=src]
 
-man:zfs[8]: OpenZFS has been updated to zfs-2.4.0-rc4(gitref:7b5b0f43eb06[repository=src]).
+man:zfs[8]: OpenZFS has been updated to zfs-2.4.0-rc4.
+gitref:7b5b0f43eb06[repository=src]
 
-man:xz[1] has been updated to 5.8.1(gitref:128836d304d9[repository=src]).
+man:xz[1] has been updated to 5.8.1.
+gitref:128836d304d9[repository=src]
 
-man:less[1] has been updated to v679(gitref:76bafc906926[repository=src]).
+man:less[1] has been updated to v679.
+gitref:76bafc906926[repository=src]
 
-man:file[1] has been updated to 5.46(gitref:ae316d1d1cff[repository=src]).
+man:file[1] has been updated to 5.46.
+gitref:ae316d1d1cff[repository=src]
 
-man:expat[3] has been updated to 2.7.3(gitref:860583c83ef2[repository=src]).
+man:expat[3] has been updated to 2.7.3.
+gitref:860583c83ef2[repository=src]
 
-man:zlib[3] has been updated to 1.3.1(gitref:6255c67c3d1a[repository=src])
+man:zlib[3] has been updated to 1.3.1.
+gitref:6255c67c3d1a[repository=src]
 
-`tzdata` has been updated to 2025b(gitref:475082194ac8[repository=src]).
+`tzdata` has been updated to 2025b.
+gitref:475082194ac8[repository=src]
 
-OpenSSH has been updated to 10.0p2(gitref:8e28d84935f2[repository=src]).
-{{< sponsored "The FreeBSD Foundation" >}}
+OpenSSH has been updated to 10.0p2.
+.gitref:8e28d84935f2[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-OpenSSL has been updated to 3.5.4(gitref:c0366f908ff4[repository=src]).
+OpenSSL has been updated to 3.5.4.
+gitref:c0366f908ff4[repository=src]
 
-`googletest` has been updated to 1.15.2(gitref:1d67cec52542[repository=src]).
+`googletest` has been updated to 1.15.2.
 One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.14.x required C++-11).
+gitref:1d67cec52542[repository=src]
 
-`spleen` has been updated to Spleen 2.1.0(gitref:26336203d32c[repository=src]).
+`spleen` has been updated to Spleen 2.1.0.
+gitref:26336203d32c[repository=src]
 
 MIT KRB5 1.22.1 Kerberos replaces Heimdal 1.5.2 by default.
 Heimdal 1.5.2 can still be built using the `WITHOUT_MITKRB5` flag.
@@ -668,7 +678,8 @@ It reports whether a `cap_rights_t` has no rights set.
 gitref:e77813f7e4a3[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
-`libcxxrt` has been updated to upstream 6f2fdfebcd62(gitref:d9901a23bd2f[repository=src]).
+`libcxxrt` has been updated to upstream 6f2fdfebcd62.
+gitref:d9901a23bd2f[repository=src]
 
 The accuracy of man:asinf[3] and man:acosf[3] has improved.
 gitref:33c82f11c267[repository=src]
@@ -721,14 +732,13 @@ gitref:3958be5c29da[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 Deprecation notice for man:syscons[4] has been added.
 man:syscons[4] is not compatible with UEFI, does not support UTF-8, and is Giant-locked.
 There is no specific timeline yet for removing it, but support for the Giant lock is expected to go away in one or two major release cycles.
-(gitref:8c922db4f3d9[repository=src]).
-{{< sponsored "The FreeBSD Foundation" >}}
+gitref:8c922db4f3d9[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 The cryptographically weak DSA signature algorithm was removed from OpenSSH, following upstream.
 
 man:publickey[5] stuffs has been deprecated.
 This uses DES and it is likely that nobody uses that in 2025.
-(gitref:9197c04a251b[repository=src]).
+gitref:9197c04a251b[repository=src]
 
 [[cloud]]
 == Cloud Support
@@ -915,17 +925,17 @@ A driver is available for man:ice[4] Ethernet network controllers in the Intel E
 It was upgraded to version 1.43.2-k.
 gitref:38a1655adcb3[repository=src] {{< sponsored "Intel Corporation" >}}
 
-man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.17 (gitref:c1d365f39e08[repository=src]).
+man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.17.
 A possible issue that devices cannot authenticate is still being investigated.
-{{< sponsored "The FreeBSD Foundation" >}}
+gitref:c1d365f39e08[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.17 (gitref:b35044b38f74[repository=src]).
+man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.17.
 The driver is under-tested and may still have issues.
-{{< sponsored "The FreeBSD Foundation" >}}
+gitref:b35044b38f74[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-man:iwlwifi[4]: Merge Intels's iwlwifi mvm/mld driver based on Linux v6.17 (gitref:69caa1cf3ce5[repository=src]).
+man:iwlwifi[4]: Merge Intels's iwlwifi mvm/mld driver based on Linux v6.17.
 The BE200 based chipsets will need newer firmware requiring further driver fixes which are not in this release.
-{{< sponsored "The FreeBSD Foundation" >}}
+gitref:69caa1cf3ce5[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 Numerous stability improvements have been in the man:iwlwifi[4] driver for Intel Wi-Fi devices.
 {{< sponsored "The FreeBSD Foundation" >}}
@@ -975,33 +985,37 @@ man:nvme[4] and man:nvmecontrol[8] have been enabled on all architectures.
 gitref:24687a65dd7f[repository=src], gitref:aba2d7f89dcf[repository=src]
 {{< sponsored "Chelsio Communications and Netflix" >}}
 
-man:mpi3mr[4] driver version has been updated to 8.14.0.2.0(gitref:e6d4b221ba7c[repository=src]).
+man:mpi3mr[4] driver version has been updated to 8.14.0.2.0.
+gitref:e6d4b221ba7c[repository=src]
 
 man:mpi3mr[4] MPI Header has been updated to Version 36.
 This aligns with the latest MPI specification.
 This includes updated structures, field definitions, and constants required for compatibility with updated firmware.
-(gitref:60cf1576501d[repository=src]).
+gitref:60cf1576501d[repository=src]
 
-The man:mpi3mr[4] driver is now in GENERIC (gitref:e2b8fb2202c2[repository=src]).
+The man:mpi3mr[4] driver is now in GENERIC.
+gitref:e2b8fb2202c2[repository=src]
 
-man:iwmbtfw[4]: Add support for 9260/9560 bluetooth adapters (gitref:8e62ae9693bd[repository=src]).
+man:iwmbtfw[4]: Add support for 9260/9560 bluetooth adapters.
 Required firmware files are already included in to package:comms/iwmbt-firmware[] port.
+gitref:8e62ae9693bd[repository=src]
 
-man:ena[4] driver version has been updated to v2.8.1 (gitref:a1685d25601e[repository=src]).
-{{< sponsored "Amazon, Inc." >}}
+man:ena[4] driver version has been updated to v2.8.1.
+gitref:a1685d25601e[repository=src] {{< sponsored "Amazon, Inc." >}}
 
 man:bnxt[4]: Enable NPAR support on BCM57504 10/25GbE NICs.
-(gitref:54f842ed8897[repository=src]).
+gitref:54f842ed8897[repository=src]
 
 man:bnxt[4]: Add 5760X (Thor2) PCI IDs support.
 Add Thor2 PCI IDs.
-(gitref:45e161020c2d[repository=src]).
+gitref:45e161020c2d[repository=src]
 
-man:bnxt[4]: Add support for 400G speed modules (gitref:32fdad17f060[repository=src]).
+man:bnxt[4]: Add support for 400G speed modules.
+gitref:32fdad17f060[repository=src]
 
 man:ix[4]: Add support for 1000BASE-BX SFP modules.
 Add support for 1Gbit BiDi modules.
-(gitref:89d4096950c4[repository=src]).
+gitref:89d4096950c4[repository=src]
 
 man:igc[4]: Fix attach for I226-K and LMVP devices.
 The device IDs for these were in the driver's list of PCI ids to attach to, but `igc_set_mac_type()` had never been setup to set the correct mac type for these devices.
@@ -1016,7 +1030,7 @@ gitref:edf50670e215[repository=src]
 {{< sponsored "BBOX.io" >}}
 
 Added support for Brainboxes USB-to-Serial adapters in man:uftdi[4].
-(gitref:47db906375b5[repository=src])
+gitref:47db906375b5[repository=src]
 
 The man:iwx[4] driver has been added, supporting the Intel Wi-Fi 6 series of M.2 wireless network adapters.
 gitref:2ad0f7e91582[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
@@ -1049,8 +1063,8 @@ man:u2f[4] driver. Device names and protocol handling for these devices are
 unchanged.
 gitref:74072e9f16c1[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-The man:udbc[4] driver has been added enabling host side debugging of targets using xHC debug (gitref:d566b6a70bcb[repository=src]).
-{{< sponsored "The FreeBSD Foundation" >}}
+The man:udbc[4] driver has been added enabling host side debugging of targets using xHC debug.
+gitref:d566b6a70bcb[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 The man:ufshci[4] driver has been added, supporting Universal Flash Storage (UFS) host controllers.
 gitref:1349a733cf28[repository=src]  {{< sponsored "Samsung Electronics" >}}
@@ -1441,7 +1455,7 @@ A new man:networking[7] manual page provides a quickstart guide to connecting th
 gitref:39f92a4c4c49[repository=src]
 
 Refer to man:graid[8] and man:zfs[8] instead of man:gvinum[8] in man:ccdconfig[8]).
-(gitref:55cb3a33d920[repository=src]).
+gitref:55cb3a33d920[repository=src]
 
 The man:ps[1] manual page has been revamped to explain the general principles, and descriptions in there have been updated to match reality.
 The preamble has been revamped to give a thorough overview of the different aspects of the man:ps[1] command.
@@ -1489,7 +1503,8 @@ This section covers changes to the FreeBSD Ports Collection, package infrastruct
 
 A new `FreeBSD-kmods` repository is included in the default `/etc/pkg/FreeBSD.conf` man:pkg[8] configuration file.
 This repository contains kernel modules compiled specifically for {releaseCurrent} rather than for the {releaseBranch} branch.
-Installing kernel modules from this repository allows drivers with unstable kernel interfaces, in particular graphics drivers, to work even when the main {releaseBranch} repository has packages build on a previous release. (gitref:a47542f71511[repository=src]).
+Installing kernel modules from this repository allows drivers with unstable kernel interfaces, in particular graphics drivers, to work even when the main {releaseBranch} repository has packages build on a previous release.
+gitref:a47542f71511[repository=src]
 
 The `FreeBSD` and `FreeBSD-kmods` repositories defined in `/etc/pkg/FreeBSD.conf` have been renamed to `FreeBSD-ports` and `FreeBSD-ports-kmods` respectively.
 Users who override these in `/usr/local/etc/pkg/repos` will need to adjust their configuration to match the new names.
