relnotes: agp(4) is still present in 15.0

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1076,8 +1076,9 @@ gitref:138e36514fe8[repository=src]
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
-man:agp[4] has been planned for removal in FreeBSD 15.0, and the man page now states that it is deprecated.
+man:agp[4] has been planned for removal in FreeBSD 16.0, and the man page now states that it is deprecated.
 gitref:92af7c97e197[repository=src]
+gitref:cadadd1a0398[repository=src]
 
 man:syscons[4] has been planned for removal in future releases, and has been noted as deprecated in the man pages to notify users to migrate to man:vt[4].
 gitref:2bc5b1d60512[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
