relnotes: Drop i386 from multiple MCFG description

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -932,7 +932,7 @@ The BE200 based chipsets will need newer firmware requiring further driver fixes
 Numerous stability improvements have been in the man:iwlwifi[4] driver for Intel Wi-Fi devices.
 {{< sponsored "The FreeBSD Foundation" >}}
 
-Multiple PCI MCFG regions are now supported on amd64 and i386, allowing PCI configuration space access for domains (segments) other than 0.
+Multiple PCI MCFG regions are now supported on amd64, allowing PCI configuration space access for domains (segments) other than 0.
 gitref:4b5f64408804[repository=src]
 
 The man:smsc[4] Ethernet driver can now fetch the value of `smsc95xx.macaddr` passed by some Raspberry Pi models and use it for the MAC address.
