relnotes: Tweaks to contrib software
- Update for last bc(1) import

- Don't mention old version of googletest, none of the other items here
  mention the prior version.

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -535,8 +535,8 @@ syntax, and feature improvements such as a floating point argument to
 The man:sendmail[8] suite has been upgraded to version 8.18.1, addressing CVE-2023-51765.
 gitref:58ae50f31e95[repository=src]
 
-`bc` has been upgraded to 7.0.2.
-gitref:90ea553a0d30[repository=src]
+`bc` has been upgraded to 7.1.0.
+gitref:fdc4a7c8012b[repository=src]
 
 `blacklist` has been renamed upstream to `blocklist`.
 Existing setups will continue to work emitting a warning.
@@ -586,7 +586,7 @@ OpenSSH has been updated to 10.0p2(gitref:8e28d84935f2[repository=src]).
 
 OpenSSL has been updated to 3.5.4(gitref:c0366f908ff4[repository=src]).
 
-`googletest` has been updated from 1.14.0 to 1.15.2(gitref:1d67cec52542[repository=src]).
+`googletest` has been updated to 1.15.2(gitref:1d67cec52542[repository=src]).
 One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.14.x required C++-11).
 
 `spleen` has been updated to Spleen 2.1.0(gitref:26336203d32c[repository=src]).
